fixed logo size on mobile

--- a/taste-master/css/style.css
+++ b/taste-master/css/style.css
@@ -291,6 +291,17 @@ textarea.form-control {
 
 .ftco-vh-100 {
   height: 100vh; }
+  .navbar-brand img {
+    height: 125px !important;
+    width: 125px !important;
+  }
+
+  @media (max-width: 500px) {
+    .navbar-brand img {
+      height: 50px !important;
+      width: 50px !important;
+    }
+  }
   @media screen and (max-width: 960px) {
     .ftco-vh-100 {
       height: inherit;
